feat: Add runtime credential ops

--- a/src/pages/Dashboard/TestingEnv/Create/index.scss
+++ b/src/pages/Dashboard/TestingEnv/Create/index.scss
@@ -14,7 +14,7 @@
   .info {
     margin: 0 auto;
     width: 453px;
-    min-height: 508px;
+    //min-height: 508px;
     height: auto;
 
     &.fmValidated {
