feat: Add providers and apply static pages

--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -234,6 +234,12 @@
       font-weight: 500;
       color: $P75;
     }
+
+    &.disabled {
+      color: $N75;
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
   }
 }
 
