--- a/src/pages/Dashboard/TestingEnv/Create/index.scss
+++ b/src/pages/Dashboard/TestingEnv/Create/index.scss
@@ -196,7 +196,7 @@
   }
   .fixPos {
     padding-bottom: 24px;
-    border-bottom: 1px solid $P75;
+    border-bottom: 1px solid $N10;
     margin-bottom: 24px;
   }
 }
