--- a/src/pages/Dashboard/TestingEnv/Create/index.scss
+++ b/src/pages/Dashboard/TestingEnv/Create/index.scss
@@ -194,6 +194,11 @@
     height: 1px;
     background-color: $N10;
   }
+  .fixPos {
+    padding-bottom: 24px;
+    border-bottom: 1px solid $N10;
+    margin-bottom: 24px;
+  }
 }
 .fixWrap {
   display: block;
