feat: Service provider detail and create static pages

--- a/src/components/Status/index.scss
+++ b/src/components/Status/index.scss
@@ -2,7 +2,7 @@
 
 .status {
   text-transform: capitalize;
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
   height: 100%;
   align-items: center;
