--- a/src/pages/Dashboard/Providers/Applications/Detail/index.scss
+++ b/src/pages/Dashboard/Providers/Applications/Detail/index.scss
@@ -10,48 +10,6 @@
     margin-bottom: 24px;
   }
 
-  .info {
-    display: flex;
-
-    dl,
-    dt,
-    dd {
-      display: inline-block;
-    }
-
-    dl {
-      flex: 1;
-      margin-bottom: 12px;
-      line-height: 20px;
-      font-size: 12px;
-
-      >button {
-        float: right;
-        margin-top: -12px;
-        margin-left: 12px;
-      }
-    }
-
-    dt {
-      color: $N75;
-    }
-
-    dd {
-      color: $N300;
-      >label {
-        color: $N500;
-        font-weight: 500;
-      }
-    }
-
-    .status {
-      font-size: 12px;
-      dt  {
-        float: left;
-      }
-    }
-  }
-
   .reason {
     line-height: 20px;
     font-size: 12px;
@@ -64,6 +22,54 @@
 
     >pre {
       margin-left: 40px;
+    }
+  }
+}
+
+.statusInfo {
+  display: flex;
+
+  dl,
+  dt,
+  dd {
+    display: inline-block;
+  }
+
+  dl {
+    flex: 1;
+    margin-bottom: 12px;
+    line-height: 20px;
+    font-size: 12px;
+
+    >button {
+      float: right;
+      margin-top: -12px;
+      margin-left: 12px;
+    }
+  }
+
+  dt {
+    color: $N75;
+  }
+
+  dd {
+    color: $N300;
+
+    >label {
+      color: $N500;
+      font-weight: 500;
+    }
+
+    >a {
+      display: inline-block;
+      margin-left: 8px;
+    }
+  }
+
+  .status {
+    font-size: 12px;
+    dt  {
+      float: left;
     }
   }
 }
