--- a/src/pages/Dashboard/Providers/Detail/index.scss
+++ b/src/pages/Dashboard/Providers/Detail/index.scss
@@ -2,8 +2,9 @@
 
 .providerInfo {
   .title {
+    margin: 0 -24px 24px;
+    padding: 0 24px;
     border-bottom: 1px solid $N10;
-    margin-bottom: 24px;
 
     .number {
       @include note-font;
