feat: User runtime and instance list (#614)
Fix auth and api middleware

--- a/src/pages/Dashboard/TestingEnv/index.scss
+++ b/src/pages/Dashboard/TestingEnv/index.scss
@@ -16,6 +16,17 @@ $card-height: 188px;
 .layout {
   margin-top: $pg-margin !important;
 
+  // fix normal layout
+  &.isNormal {
+    margin-top: 0 !important;
+    .leftPanel {
+      max-width: 220px;
+    }
+    .page {
+      margin: 0 auto;
+    }
+  }
+
   .leftPanel {
     max-width: 205px;
     border-right: 1px solid $N10;
@@ -27,18 +38,19 @@ $card-height: 188px;
       width: 885px;
     }
   }
+
+  .pageTitle {
+    font-size: $size-medium;
+    color:$N500;
+    margin-bottom: $pg-margin;
+    margin-left: 102px;
+  }
 }
 
 .page {
   display: block;
   margin-left: $body-margin - 30px;
   margin-right: $body-margin - 30px;
-
-  .title {
-    font-size: $size-medium;
-    color:$N500;
-    margin-bottom: $pg-margin;
-  }
 
   .platforms {
     border-right: 1px solid $N10;
