feat: Add new all apps and detail pages

--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -171,6 +171,8 @@
       transition: all $transition-speed;
       word-wrap: break-word;
       word-break: break-all;
+      font-size: 12px;
+
       a {
         color: $N500;
       }
