--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -1,5 +1,11 @@
 @import '~scss/vars';
 
+%disabledLink {
+  color: $N75;
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 .nav {
   position: fixed;
   left: 0;
@@ -36,6 +42,13 @@
       margin-left: -4px;
       line-height: 40px;
       cursor: pointer;
+    }
+
+    &.disabled {
+      @extend %disabledLink;
+      .title {
+        cursor: not-allowed;
+      }
     }
 
     &:hover {
@@ -238,9 +251,7 @@
     }
 
     &.disabled {
-      color: $N75;
-      opacity: 0.5;
-      cursor: not-allowed;
+      @extend %disabledLink;
     }
   }
 }
