style:Tree checkbox

--- a/src/pages/Dashboard/Roles/BindingActions/index.scss
+++ b/src/pages/Dashboard/Roles/BindingActions/index.scss
@@ -23,4 +23,9 @@
   ul ul li {
     display: inline-block;
   }
+  :global {
+    ul ul.rc-tree-child-tree-open {
+      display: inline-block;
+    }
+  }
 }
