--- a/src/pages/Dashboard/Categories/index.scss
+++ b/src/pages/Dashboard/Categories/index.scss
@@ -17,7 +17,7 @@
   }
   .cates {
     border-right: 1px solid $N10;
-    .provider {
+    .item {
       height: 40px;
       padding-left: 12px;
       cursor: pointer;
