--- a/src/components/Base/Tree/index.scss
+++ b/src/components/Base/Tree/index.scss
@@ -123,7 +123,8 @@
           border-left: 0;
           content: ' ';
           transition: all .2s cubic-bezier(.12, .4, .29, 1.46) .1s;
-          opacity: 1;        }
+          opacity: 1;
+        }
       }
     }
     .checkbox-inner {
@@ -133,11 +134,14 @@
       display: inline-block;
       width: 16px;
       height: 16px;
-      border: 1px solid $P75;
+      border: 1px solid $N30;
       border-radius: 2px;
       background-color: $N0;
       transition: all .3s;
       border-collapse: separate;
+      &:hover {
+        border: 1px solid $P75;
+      }
       &:after {
         transform: rotate(45deg) scale(0);
         position: absolute;
