--- a/src/pages/Dashboard/Roles/BindingActions/index.scss
+++ b/src/pages/Dashboard/Roles/BindingActions/index.scss
@@ -8,18 +8,23 @@
     color: $N500;
     font-weight: 500;
   }
-  > div {
-    margin: 16px 0 7px;
+  .actions + .actions {
+    border-top: 1px solid $N10;
   }
+}
+
+.actions {
+  margin: 16px 0;
 }
 
 .header {
   font-size: $size-normal;
   color: $N500;
-  margin: 12px 0 12px;
+  margin: 16px 0;
 }
 
 .tree {
+  margin: 5px 0 10px;
   ul ul li {
     display: inline-block;
   }
