--- a/src/pages/Dashboard/Providers/CertificateInfo/index.scss
+++ b/src/pages/Dashboard/Providers/CertificateInfo/index.scss
@@ -35,3 +35,13 @@
     }
   }
 }
+
+.blankInfo {
+  padding: 96px 0;
+  text-align: center;
+
+  .word {
+    @include note-font;
+    margin-top: 8px;
+  }
+}
