--- a/src/pages/Dashboard/Categories/index.scss
+++ b/src/pages/Dashboard/Categories/index.scss
@@ -89,8 +89,15 @@
       }
     }
   }
+
+  .chosenCateNames {
+    margin: 0 5px;
+  }
 }
 
+.selectCateToAdjust{
+  margin-top: 20px;
+}
 
 .categories{
   text-align: center;
