--- a/src/components/Base/Select/index.scss
+++ b/src/components/Base/Select/index.scss
@@ -66,7 +66,7 @@
 
 .options {
   display: none;
-  position: absolute;
+  position: relative;
   z-index: 11;
   width: 100%;
   max-height: 300px;
