--- a/src/components/Base/Button/index.scss
+++ b/src/components/Base/Button/index.scss
@@ -50,6 +50,7 @@
     }
     &:disabled {
       opacity: 0.5;
+      cursor: not-allowed;
     }
   }
 
@@ -67,6 +68,7 @@
     }
     &:disabled{
       opacity: 0.5;
+      cursor: not-allowed;
     }
   }
 
@@ -82,6 +84,7 @@
     }
     &:disabled{
       opacity: 0.5;
+      cursor: not-allowed;
     }
   }
 }
