--- a/src/pages/Dashboard/Roles/RoleTree/index.scss
+++ b/src/pages/Dashboard/Roles/RoleTree/index.scss
@@ -86,3 +86,35 @@
   border-left: 1px solid $N30;
 }
 
+.form {
+  .fmCtrl {
+    margin-bottom: 24px;
+  }
+  label {
+    display: inline-block;
+    margin-right: 24px;
+    width: 168px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14;
+    text-align: right;
+    color: $N500;
+  }
+  .input {
+    width: 256px;
+    height: 32px;
+    border-radius: 2px;
+  }
+  .textareaItem {
+    height: 80px;
+    > label {
+      float: left;
+      position: relative;
+      top: 10px;
+    }
+  }
+  :global(.modal-footer) {
+    text-indent: 192px;
+    text-align: left;
+  }
+}
