--- a/src/pages/Dashboard/Reviews/index.scss
+++ b/src/pages/Dashboard/Reviews/index.scss
@@ -21,12 +21,12 @@
 }
 
 .appCardContent {
-  >a{
+  > a {
     display: inline-block;
     margin: 0 20px 20px 0;
     width: calc(25% - 15px);
 
-    &:nth-child(4n+4) {
+    &:nth-child(4n + 4) {
       margin-right: 0;
     }
   }
@@ -40,7 +40,8 @@
   padding: 40px 20px 20px;
   border-radius: 2px;
   background-color: $N0;
-  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06),
+    0 4px 8px 0 rgba(35, 35, 36, 0.04);
   text-align: center;
   cursor: pointer;
 
@@ -51,7 +52,7 @@
     line-height: 48px;
     margin-bottom: 12px;
     border-radius: 2px;
-    img{
+    img {
       max-width: 100%;
       max-height: 100%;
       vertical-align: middle;
@@ -81,6 +82,6 @@
   }
 }
 
-.provider{
+.provider {
   max-width: 115px;
 }
