--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -144,6 +144,7 @@
     width: 400px;
     height: 88px;
     line-height: 20px;
+    font-size: 12px;
     border-radius: 2px;
     background-color: $N0;
     border: 1px solid $N30;
