--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -209,6 +209,8 @@
     padding-left: 20px;
 
     .name {
+      @include textCut;
+      max-width: 165px;
       line-height: 16px;
       font-size: 16px;
       font-weight: 500;
